--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilerplate",
-  "version": "0.0.1",
-  "description": "Node/Express, ReactJS, Authentication boilerplate for use in future projects for anyone wanting to jump right into making content.",
+  "version": "0.1.3",
+  "description": "Node/Express, ReactJS, Authentication boilerplate for use in future projects for anyone wanting to jump right into making content!",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,7 +18,13 @@
   "homepage": "https://github.com/JosephLivengood/Boilerplate#readme",
   "dependencies": {
     "body-parser": "^1.16.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "mongodb": "^2.2.21",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^1.0.0",
     "pug": "^2.0.0-beta6"
   }
 }
