--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Node/Express, ReactJS, Authentication boilerplate for use in future projects for anyone wanting to jump right into making content!",
   "main": "server.js",
   "scripts": {
+    "postinstall": "npm run build-react",
     "test": "mocha test/ test/**",
     "build-react-prod": "webpack -p",
     "build-react": "webpack",
