--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.21",
     "node-sass": "^4.4.0",
