--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "conquerjs",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "Node/Express, ReactJS, Authentication boilerplate for use in future projects for anyone wanting to jump right into making content!",
   "main": "server.js",
   "scripts": {
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/JosephLivengood/Boilerplate#readme",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
@@ -32,6 +33,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "extract-text-webpack-plugin": "^1.0.1",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.21",
     "node-sass": "^4.4.0",
